--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -42,14 +42,15 @@
 		position: absolute;
 		//font-size: 80px;
 		width: 98%;
-		padding-bottom: 10rem;
+		padding-bottom: 12rem;
 		line-height: 3.5rem;
 		text-align: left;
+		letter-spacing: 6px;
 	}
 
 	.first-layer {
 		z-index: 2; /* Higher index on top */
-		-webkit-text-stroke-width: 0.3px;
+		-webkit-text-stroke-width: 0.2px;
 		-webkit-text-stroke-color: white;
 		font-weight: bolder;
 		//width: 100%;
@@ -73,7 +74,7 @@
 			color: $primary-color;
 			font-family: $montserrat-alternates-bold;
 			font-weight: bold;
-			font-size: $font-size-xlarge;
+			font-size: $font-size-xxlarge;
 		}
 		.accent {
 			color: $secondary-color;
