--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,6 +1,6 @@
 // Color Variables
-$primary-color: #ecf0f1;
+$primary-color: white;
 $secondary-color: #a536cf;
 $background-color-dark: #191919;
 $background-color-light: #2c3e50;
-$text-color: white;
+$text-color: rgba(245, 237, 237, 0.816);
