--- a/src/components/NavBar/Navbar.scss
+++ b/src/components/NavBar/Navbar.scss
@@ -4,20 +4,27 @@
 .nav {
 	position: relative;
 	z-index: 3;
+	display: flex;
+	justify-content: flex-end;
+	padding-right: 45px;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
 	&-box {
 		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 30vh;
+		height: 60vh;
+		padding: 0 0 14rem 0;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
 		background: linear-gradient(
 			to bottom,
-			rgba(0, 0, 0, 0.9),
-			rgba(0, 0, 0, 0.7),
+			rgba(0, 0, 0, 1),
+			rgba(0, 0, 0, 1),
+			rgba(0, 0, 0, 0.8),
 			rgba(0, 0, 0, 0.1)
 		);
 		transition: transform 0.3s ease-in-out;
@@ -34,6 +41,12 @@
 	}
 	&_item {
 		color: $primary-color;
+		list-style: none;
+		font-family: $roc-grotesk-medium;
+		font-size: $font-size-medium;
+		margin: 5px;
+		font-weight: 700;
+		letter-spacing: 2px;
 	}
 	.hamburger {
 		cursor: pointer;
