Updated style on Database section

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,7 @@
 
 .header {
 	position: relative;
-	width: 100vw;
+	//width: 100vw;
 	height: 100vh;
 	background-image: url("../../assets/Images/moon.jpg");
 	background-size: cover;
