--- a/src/components/DatabaseBox/DatabaseBox.scss
+++ b/src/components/DatabaseBox/DatabaseBox.scss
@@ -8,8 +8,9 @@
 }
 
 .box {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	display: flex;
+	justify-content: space-around;
+	//grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	gap: 20px;
 	background-color: #1f1f1f;
 	padding: 20px;
@@ -28,18 +29,21 @@
 	align-items: center;
 	justify-content: center;
 	width: 100%;
+	height: 100%;
 }
 
 .box-content-title {
 	font-size: 18px;
 	margin-bottom: 10px;
 	color: #a536cf;
+	font-family: $roc-grotesk-regular;
 }
 
 .box-content-subtitle {
 	font-size: 14px;
 	margin-bottom: 5px;
 	color: #a0a0a0;
+	font-family: $montserrat-alternates-bold;
 }
 
 .box-circle {
@@ -54,6 +58,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
+	width: 50%;
 	&-row {
 		display: flex;
 		justify-content: space-between;
@@ -75,8 +80,27 @@ img {
 
 .box-content-bigger {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
 	gap: 1rem;
+}
+
+.box-content-sql {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 1rem;
+	width: 50%;
+}
+.box-title {
+	font-size: 60px;
+	margin-bottom: 10px;
+	color: #a536cf;
+	writing-mode: vertical-rl; /* Rotate the text vertically */
+	transform: rotate(180deg);
+	letter-spacing: 25px;
+	background-color: #2b2b2b;
+	border-radius: 8px;
+	font-family: $montserrat-alternates-bold;
 }
