--- a/src/components/DatabaseBox/DatabaseBox.scss
+++ b/src/components/DatabaseBox/DatabaseBox.scss
@@ -95,6 +95,7 @@ img {
 }
 .box-title {
 	font-size: 60px;
+	font-weight: 800;
 	margin-bottom: 10px;
 	color: #a536cf;
 	writing-mode: vertical-rl; /* Rotate the text vertically */
