--- a/src/components/CircularProgressBar/CircularProgressBar.scss
+++ b/src/components/CircularProgressBar/CircularProgressBar.scss
@@ -4,14 +4,14 @@
 .circle-container {
 	display: flex;
 	align-items: center;
-	justify-content: space-evenly;
+	justify-content: space-around;
 	height: 25vh;
 	flex-direction: row;
 }
 
 .circle {
-	width: 150px;
-	height: 150px;
+	width: 125px;
+	height: 125px;
 	border-radius: 50%;
 	display: flex;
 	align-items: center;
