--- a/src/components/CircularProgressBar/CircularProgressBar.scss
+++ b/src/components/CircularProgressBar/CircularProgressBar.scss
@@ -10,8 +10,8 @@
 }
 
 .circle {
-	width: 125px;
-	height: 125px;
+	width: 90px;
+	height: 90px;
 	border-radius: 50%;
 	display: flex;
 	align-items: center;
@@ -21,8 +21,8 @@
 }
 
 .inner-circle {
-	width: 100px;
-	height: 100px;
+	width: 70px;
+	height: 70px;
 	border-radius: 50%;
 	background-color: $background-color-dark;
 	display: flex;
@@ -39,7 +39,7 @@
 }
 
 .percentage {
-	font-size: 1rem;
+	font-size: $font-size-small;
 	font-weight: bold;
 	color: $primary-color;
 }
