--- a/src/components/SoftSkills/SoftSkills.scss
+++ b/src/components/SoftSkills/SoftSkills.scss
@@ -2,16 +2,25 @@
 @use "../../styles/partials/fonts" as *;
 
 .soft_skills {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 2; // Ensure the content is above the opacity layer
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	gap: 2rem;
+	padding: 0 45px;
 	&-box {
-		//width: 30%;
-		//text-align: center;
 		h3 {
-			font-size: $font-size-small;
+			font-size: 14px;
 			font-family: $montserrat-alternates-bold;
+		}
+		p {
+			font-size: $font-size-small;
+			font-family: $montserrat-alternates-light;
 		}
 	}
 	&-circle {
@@ -32,22 +41,61 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		gap: 0.5rem;
 	}
 	&-bottom {
 		display: flex;
 		flex-direction: column;
-		gap: 3rem;
+		gap: 5rem;
 	}
 }
 
 .line {
-	width: 5px;
-	height: 10rem;
+	width: 3px;
+	height: 8rem;
 	background-color: white;
 	&-container {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 	}
+}
+
+.soft_skills-layer {
+	background-image: url(../../assets/Images/g.png);
+	border-top-left-radius: 50%;
+	border-bottom-left-radius: 50%;
+	padding: 0 45px;
+}
+
+.soft_skills-background {
+	height: 38rem;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	position: relative;
+	&-box {
+		background-image: url(../../assets/Images/g-final.png);
+		height: 30rem;
+		width: 15rem;
+		background-size: cover;
+		background-position: center;
+		overflow: hidden;
+	}
+}
+.opacity-layer {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.6); // Black with 50% opacity
+	z-index: 1; // Ensure the layer is on top
+}
+
+.highlight {
+	color: $secondary-color;
+	letter-spacing: 3px;
+	font-weight: 800;
+	-webkit-text-stroke-color: #a536cf;
+	-webkit-text-stroke-width: 0.4px;
 }
