--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,2 +1,164 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/fonts" as *;
+
+@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/fonts" as *;
+
+.projects_top {
+	position: relative;
+	height: 25vh;
+	&_overlay {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: rgba(0, 0, 0, 0.5); /* Adjust the opacity here */
+	}
+	&_box {
+		display: flex;
+		flex-direction: column;
+		gap: 6rem;
+		align-items: center;
+		width: 100%;
+	}
+	.text-layer {
+		align-items: center;
+		//justify-content: center;
+		position: relative;
+		top: 50%;
+		left: 50%;
+		width: 100%;
+		display: flex;
+		transform: translate(-50%, 30%);
+		text-align: center;
+		color: white; /* Or any color that contrasts with your background */
+	}
+
+	.text-layer p {
+		margin: 0;
+		position: absolute;
+		width: 98%;
+		line-height: 3.5rem;
+		text-align: left;
+	}
+
+	.first-layer {
+		z-index: 2;
+		-webkit-text-stroke-width: 0.2px;
+		-webkit-text-stroke-color: white;
+		font-weight: bolder;
+		font-size: 75px;
+		color: transparent;
+		position: relative;
+		font-family: $montserrat-alternates-light;
+	}
+
+	.second-layer {
+		position: relative;
+		z-index: 1;
+		top: 0;
+		left: 0;
+		text-align: left;
+		display: flex;
+		flex-direction: column;
+		padding: 0 45px;
+		letter-spacing: 2px;
+		&_text {
+			color: $primary-color;
+			font-family: $montserrat-alternates-bold;
+			font-weight: bold;
+			font-size: $font-size-xlarge;
+			line-height: 2.5rem;
+			&-bottom {
+				font-size: $font-size-xlarge;
+				line-height: 2rem;
+				font-weight: lighter;
+				padding-top: 5px;
+			}
+		}
+		.accent {
+			color: $secondary-color;
+		}
+	}
+
+	.second-layer p {
+		margin-top: 10px; /* Adjust spacing between lines */
+		font-size: $font-size-xlarge;
+	}
+
+	.img-container {
+		position: relative;
+		img {
+			width: 175px;
+			height: 175px;
+			margin: 0 auto;
+			border-radius: 50%;
+		}
+	}
+
+	&_text-wrapper {
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		padding: 0 45px;
+		align-items: center;
+		p {
+			text-align: center;
+		}
+		button {
+			text-align: center;
+		}
+	}
+
+	&_btn {
+		background-color: $secondary-color;
+		width: 200px;
+		color: $primary-color;
+	}
+}
+
+.projects {
+	&_container {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		gap: 1rem;
+		padding: 0 45px;
+	}
+	.project {
+		h2 {
+			color: white;
+			font-family: $montserrat-alternates-light;
+			font-weight: 400;
+			font-size: $font-size-xlarge;
+		}
+		img {
+			width: 19rem;
+			height: 15rem;
+		}
+	}
+	.links {
+		display: flex;
+		justify-content: space-between;
+		a {
+			margin-top: 1rem;
+			background-color: $secondary-color;
+			color: $primary-color;
+			border-radius: 10px;
+			font-weight: 300;
+			padding: 0.5rem;
+			cursor: pointer;
+		}
+	}
+	.stack {
+		display: flex;
+		gap: 1rem;
+		padding: 1rem 0;
+		.tech {
+			color: $secondary-color;
+			font-weight: 400;
+			font-family: $montserrat-alternates-light;
+		}
+	}
+}
