--- a/src/components/SoftSkills/SoftSkills.scss
+++ b/src/components/SoftSkills/SoftSkills.scss
@@ -11,7 +11,8 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	gap: 2rem;
+	justify-content: space-between;
+	gap: 1rem;
 	padding: 0 45px;
 	&-title {
 		color: $primary-color;
@@ -21,17 +22,17 @@
 		bottom: 20rem;
 		left: 45px;
 		position: relative;
-		//padding-bottom: 5rem;
 		width: 35%;
 	}
 	&-box {
 		h3 {
-			font-size: $font-size-small;
+			font-size: 13px;
 			font-family: $montserrat-alternates-bold;
 		}
 		p {
-			font-size: $font-size-small;
+			font-size: 12.5px;
 			font-family: $montserrat-alternates-light;
+			font-weight: 500;
 		}
 	}
 	&-circle {
@@ -47,6 +48,7 @@
 		gap: 6rem;
 		text-align: center;
 		align-items: flex-end;
+		width: 110px;
 		> :first-child {
 			position: relative;
 			bottom: 2.5rem;
@@ -63,6 +65,7 @@
 		gap: 8rem;
 		position: relative;
 		top: 8rem;
+		width: 110px;
 		> :first-child {
 			position: relative;
 			// bottom: 2rem;
