--- a/src/components/DatabaseBox/DatabaseBox.scss
+++ b/src/components/DatabaseBox/DatabaseBox.scss
@@ -1,107 +1,15 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/fonts" as *;
 
-.box-container {
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-}
-
 .box {
-	display: flex;
-	justify-content: space-around;
-	//grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-	gap: 20px;
-	background-color: #1f1f1f;
-	padding: 20px;
-	border-radius: 8px;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.box-content {
-	background-color: #2b2b2b;
-	padding: 20px;
-	border-radius: 8px;
-	text-align: center;
-	color: #ffffff;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	height: 100%;
-}
-
-.box-content-title {
-	font-size: 18px;
-	margin-bottom: 10px;
-	color: #a536cf;
-	font-family: $roc-grotesk-regular;
-}
-
-.box-content-subtitle {
-	font-size: 14px;
-	margin-bottom: 5px;
-	color: #a0a0a0;
-	font-family: $montserrat-alternates-bold;
-}
-
-.box-circle {
-	background-color: #2b2b2b;
-	padding: 2.5rem 4rem;
-	border-radius: 50%;
-	text-align: center;
-	color: #ffffff;
-}
-
-.box-wrapper {
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-	width: 50%;
-	&-row {
-		display: flex;
-		justify-content: space-between;
-		width: 100%;
-		gap: 1rem;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr); /* Create 2 equal columns */
+	justify-content: space-between; /* Distribute space between columns */
+	align-content: space-between; /* Distribute space between rows */
+	gap: 0; /* Remove the gap between grid items */
+	padding: 2rem 0;
+	img {
+		width: 5rem;
+		height: 5rem;
 	}
-}
-
-img {
-	width: 4rem;
-	height: 4rem;
-}
-
-.box-content-big {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
-.box-content-bigger {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
-	gap: 1rem;
-}
-
-.box-content-sql {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	gap: 1rem;
-	width: 50%;
-}
-.box-title {
-	font-size: 60px;
-	font-weight: 800;
-	margin-bottom: 10px;
-	color: #a536cf;
-	writing-mode: vertical-rl; /* Rotate the text vertically */
-	transform: rotate(180deg);
-	letter-spacing: 25px;
-	background-color: #2b2b2b;
-	border-radius: 8px;
-	font-family: $montserrat-alternates-bold;
 }
