--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -108,6 +108,7 @@
 		p {
 			text-align: center;
 			color: $primary-color;
+			font-family: $roc-grotesk-light;
 		}
 		button {
 			text-align: center;
