--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,9 +1,6 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/fonts" as *;
 
-@use "../../styles/partials/variables" as *;
-@use "../../styles/partials/fonts" as *;
-
 .projects_top {
 	position: relative;
 	height: 25vh;
@@ -125,8 +122,12 @@
 		justify-content: center;
 		gap: 1rem;
 		padding: 0 45px;
+		margin-bottom: 2rem;
 	}
 	.project {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
 		h2 {
 			color: white;
 			font-family: $montserrat-alternates-light;
@@ -136,6 +137,10 @@
 		img {
 			width: 19rem;
 			height: 15rem;
+		}
+		.description {
+			color: $primary-color;
+			font-family: $roc-grotesk-light;
 		}
 	}
 	.links {
