--- a/src/components/SoftSkills/SoftSkills.scss
+++ b/src/components/SoftSkills/SoftSkills.scss
@@ -46,7 +46,7 @@
 		display: flex;
 		flex-direction: column;
 		gap: 6rem;
-		text-align: center;
+		text-align: left;
 		align-items: flex-end;
 		width: 110px;
 		> :first-child {
