Fixed database icons, added more info to about me section

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -26,3 +26,11 @@
 .slick-dots li.slick-active button:before {
 	color: black;
 }
+
+.intro {
+	padding: 1rem 45px;
+	margin-top: 2rem;
+	p {
+		font-family: $roc-grotesk-light;
+	}
+}
