--- a/src/components/CircularProgressBar/CircularProgressBar.scss
+++ b/src/components/CircularProgressBar/CircularProgressBar.scss
@@ -5,13 +5,13 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	height: 25vh;
+	//height: 25vh;
 	flex-direction: row;
 }
 
 .circle {
-	width: 90px;
-	height: 90px;
+	width: 100px;
+	height: 100px;
 	border-radius: 50%;
 	display: flex;
 	align-items: center;
@@ -21,8 +21,8 @@
 }
 
 .inner-circle {
-	width: 70px;
-	height: 70px;
+	width: 80px;
+	height: 80px;
 	border-radius: 50%;
 	background-color: $background-color-dark;
 	display: flex;
