--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,12 +1,101 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/fonts" as *;
 
+.contact_top {
+	position: relative;
+	height: 25vh;
+	&_overlay {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: rgba(0, 0, 0, 0.5); /* Adjust the opacity here */
+	}
+	&_box {
+		display: flex;
+		flex-direction: column;
+		gap: 6rem;
+		align-items: center;
+		width: 100%;
+	}
+	.text-layer {
+		align-items: center;
+		//justify-content: center;
+		position: relative;
+		top: 50%;
+		left: 50%;
+		width: 100%;
+		display: flex;
+		transform: translate(-50%, 30%);
+		text-align: center;
+		color: white; /* Or any color that contrasts with your background */
+	}
+
+	.text-layer p {
+		margin: 0;
+		position: absolute;
+		width: 98%;
+		line-height: 3.5rem;
+		text-align: left;
+	}
+
+	.first-layer {
+		z-index: 2;
+		-webkit-text-stroke-width: 0.2px;
+		-webkit-text-stroke-color: white;
+		font-weight: bolder;
+		font-size: 75px;
+		color: transparent;
+		position: relative;
+		font-family: $montserrat-alternates-light;
+	}
+
+	.second-layer {
+		position: relative;
+		z-index: 1;
+		top: 0;
+		left: 0;
+		text-align: left;
+		display: flex;
+		flex-direction: column;
+		padding: 0 45px;
+		letter-spacing: 2px;
+		&_text {
+			color: $primary-color;
+			font-family: $montserrat-alternates-bold;
+			font-weight: bold;
+			font-size: $font-size-xlarge;
+			line-height: 2.5rem;
+			&-bottom {
+				font-size: $font-size-xlarge;
+				line-height: 2rem;
+				font-weight: lighter;
+				padding-top: 5px;
+			}
+		}
+		.accent {
+			color: $secondary-color;
+		}
+	}
+
+	.second-layer p {
+		margin-top: 10px; /* Adjust spacing between lines */
+		font-size: $font-size-xlarge;
+	}
+}
+
 .contact {
 	padding: 0 45px;
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
 	align-items: center;
+	&_container {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+	}
 	button {
 		color: white;
 		font-family: $roc-grotesk-light;
