--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,7 @@
 
 .header {
 	position: relative;
-	height: 100vh;
+	//height: 100vh;
 	background-image: url("/moon.jpg");
 	background-size: cover;
 	background-position: center;
@@ -41,7 +41,7 @@
 		position: absolute;
 		width: 98%;
 		padding-bottom: 8rem;
-		line-height: 3.5rem;
+		line-height: 4rem;
 		text-align: left;
 	}
 
@@ -50,7 +50,8 @@
 		-webkit-text-stroke-width: 0.2px;
 		-webkit-text-stroke-color: white;
 		font-weight: bolder;
-		font-size: 70px;
+		//font-size: 70px;
+		font-size: 18vw;
 		color: transparent;
 		position: relative;
 		font-family: $montserrat-alternates-light;
@@ -105,10 +106,12 @@
 		flex-direction: column;
 		padding: 0 45px;
 		align-items: center;
+
 		p {
 			text-align: center;
 			color: $primary-color;
 			font-family: $roc-grotesk-light;
+			font-size: $font-size-medium;
 		}
 		button {
 			text-align: center;
@@ -119,5 +122,52 @@
 		background-color: $secondary-color;
 		width: 200px;
 		color: $primary-color;
+		margin-bottom: 3rem;
+	}
+}
+
+@media only screen and (min-width: 660px) {
+	.header {
+		//height: 120vh;
+		&_box {
+			gap: 10rem;
+			position: relative;
+			bottom: 5rem;
+		}
+		&_text-wrapper {
+			padding: 0 70px;
+			position: relative;
+			bottom: 3rem;
+			p {
+				font-size: $font-size-medium;
+			}
+		}
+		.first-layer {
+			font-size: 125px;
+			-webkit-text-stroke-width: 0.3px;
+		}
+		.text-layer p {
+			line-height: 7.5rem;
+			//bottom: 2rem;
+		}
+		.second-layer {
+			padding: 0 70px;
+			&_text {
+				font-size: 70px;
+				line-height: 5rem;
+				padding-right: 2rem;
+
+				&-bottom {
+					font-size: 50px;
+					line-height: 3rem;
+				}
+			}
+		}
+		.img-container {
+			img {
+				width: 225px;
+				height: 225px;
+			}
+		}
 	}
 }
