--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -60,6 +60,6 @@
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	height: 30vh;
+	//height: 30vh;
 	flex-direction: row;
 }
