--- a/src/components/CircularProgressBar/CircularProgressBar.scss
+++ b/src/components/CircularProgressBar/CircularProgressBar.scss
@@ -1,17 +1,16 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/fonts" as *;
 
-.circle-container {
+.circle_container {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	//height: 25vh;
 	flex-direction: row;
 }
 
 .circle {
-	width: 100px;
-	height: 100px;
+	width: 20vw;
+	height: 20vw;
 	border-radius: 50%;
 	display: flex;
 	align-items: center;
@@ -21,8 +20,8 @@
 }
 
 .inner-circle {
-	width: 80px;
-	height: 80px;
+	width: 16vw;
+	height: 16vw;
 	border-radius: 50%;
 	background-color: $background-color-dark;
 	display: flex;
@@ -33,13 +32,13 @@
 }
 
 .icon {
-	width: 34px;
-	height: 34px;
+	width: 6vw;
+	height: 6vw;
 	margin-bottom: 5px;
 }
 
 .percentage {
-	font-size: $font-size-small;
+	font-size: 2vw;
 	font-weight: bold;
 	color: $primary-color;
 }
