--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -111,7 +111,7 @@
 			text-align: center;
 			color: $primary-color;
 			font-family: $roc-grotesk-light;
-			font-size: $font-size-medium;
+			font-size: 14px;
 		}
 		button {
 			text-align: center;
@@ -128,34 +128,32 @@
 
 @media only screen and (min-width: 660px) {
 	.header {
-		//height: 120vh;
 		&_box {
-			gap: 10rem;
+			gap: 8rem;
 			position: relative;
-			bottom: 5rem;
+			bottom: 1.5rem;
 		}
 		&_text-wrapper {
-			padding: 0 70px;
+			padding: 0 135px;
 			position: relative;
-			bottom: 3rem;
+			gap: 2rem;
 			p {
-				font-size: $font-size-medium;
+				font-size: 20px;
 			}
 		}
 		.first-layer {
-			font-size: 125px;
 			-webkit-text-stroke-width: 0.3px;
 		}
 		.text-layer p {
-			line-height: 7.5rem;
-			//bottom: 2rem;
+			line-height: 7rem;
 		}
 		.second-layer {
 			padding: 0 70px;
+			left: -4rem;
 			&_text {
-				font-size: 70px;
-				line-height: 5rem;
-				padding-right: 2rem;
+				font-size: 65px;
+				line-height: 4.5rem;
+				padding-right: 3.5rem;
 
 				&-bottom {
 					font-size: 50px;
@@ -168,6 +166,11 @@
 				width: 225px;
 				height: 225px;
 			}
+		}
+		&_btn {
+			margin-bottom: 6rem;
+			width: 250px;
+			font-size: 20px;
 		}
 	}
 }
