--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -58,7 +58,7 @@
 
 .circle-container {
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-between;
 	align-items: center;
 	//height: 30vh;
 	flex-direction: row;
