--- a/src/components/NavBar/Navbar.scss
+++ b/src/components/NavBar/Navbar.scss
@@ -79,6 +79,11 @@
 @media only screen and (min-width: 660px) {
 	.nav {
 		padding-right: 50px;
+		&-box {
+			&.show {
+				top: -15px;
+			}
+		}
 		.hamburger {
 			&_1 {
 				width: 50px;
