--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -10,7 +10,7 @@
 
 .slick-slide img {
 	width: 80%;
-	border-radius: 20px;
+	border-radius: 40px;
 	margin: 0 auto;
 }
 
@@ -28,7 +28,7 @@
 }
 
 .intro {
-	padding: 1rem 70px;
+	padding: 1rem 45px;
 	margin-top: 2rem;
 	p {
 		font-family: $roc-grotesk-light;
@@ -37,12 +37,31 @@
 
 @media only screen and (min-width: 660px) {
 	.slider {
-		padding: 0 135px;
+		padding: 0 125px;
+		//margin: 4rem 0;
 	}
 	.intro {
-		padding: 1rem 135px;
+		padding: 1rem 70px;
 	}
 	.slick-slide img {
 		width: 90%;
+	}
+	.slick-prev:before,
+	.slick-next:before {
+		font-size: 35px;
+	}
+
+	.slick-prev {
+		left: -70px; /* Adjust this value to give space for the left arrow */
+	}
+
+	.slick-next {
+		right: -50px; /* Adjust this value to give space for the right arrow */
+	}
+
+	.intro {
+		p {
+			font-size: 20px;
+		}
 	}
 }
