--- a/src/components/CircularProgressBar/CircularProgressBar.scss
+++ b/src/components/CircularProgressBar/CircularProgressBar.scss
@@ -6,11 +6,12 @@
 	align-items: center;
 	justify-content: space-between;
 	flex-direction: row;
+	padding: 1.5rem 0;
 }
 
 .circle {
-	width: 20vw;
-	height: 20vw;
+	width: 22vw;
+	height: 22vw;
 	border-radius: 50%;
 	display: flex;
 	align-items: center;
@@ -32,8 +33,8 @@
 }
 
 .icon {
-	width: 6vw;
-	height: 6vw;
+	width: 8vw;
+	height: 8vw;
 	margin-bottom: 5px;
 }
 
