--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,6 @@
 
 .header {
 	position: relative;
-	//height: 100vh;
 	background-image: url("/moon.jpg");
 	background-size: cover;
 	background-position: center;
@@ -25,7 +24,8 @@
 	}
 	.text-layer {
 		align-items: center;
-		justify-content: center;
+		//justify-content: center;
+		//background-color: red;
 		position: relative;
 		top: 50%;
 		left: 50%;
@@ -83,6 +83,11 @@
 		.accent {
 			color: $secondary-color;
 		}
+		&.inline {
+			display: inline-flex;
+			align-items: center;
+			gap: 0.5rem; /* Adjust spacing between "I'm" and "Maria" */
+		}
 	}
 
 	.second-layer p {
@@ -132,6 +137,7 @@
 			gap: 8rem;
 			position: relative;
 			bottom: 1.5rem;
+			justify-content: space-between;
 		}
 		&_text-wrapper {
 			padding: 0 135px;
@@ -149,7 +155,7 @@
 		}
 		.second-layer {
 			padding: 0 70px;
-			left: -4rem;
+			//left: -4rem;
 			&_text {
 				font-size: 65px;
 				line-height: 4.5rem;
@@ -171,6 +177,79 @@
 			margin-bottom: 6rem;
 			width: 250px;
 			font-size: 20px;
+		}
+	}
+}
+
+@media only screen and (min-width: 960px) {
+	.header {
+		background-image: url(../../assets/Images/moon2.jpg);
+		background-position: top;
+		&_box {
+			display: flex;
+			flex-direction: row;
+			top: 1rem;
+			gap: 0;
+			align-items: center;
+			padding: 2rem 135px 0;
+			justify-content: space-between;
+		}
+		.first-layer {
+			font-size: 12vw;
+			-webkit-text-stroke-width: 0.2px;
+		}
+		.second-layer {
+			padding: 0;
+		}
+		.text-layer {
+			transform: none;
+			top: 0;
+			left: 0;
+			width: auto;
+			align-items: flex-start;
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+			p {
+				line-height: 12rem;
+				padding-bottom: 0;
+				bottom: -1rem;
+			}
+		}
+		.second-layer {
+			&_text {
+				font-size: 80px;
+			}
+			&.inline {
+				display: inline-flex;
+				align-items: center;
+				gap: 0.5rem;
+			}
+			.inline span.accent {
+				display: inline;
+			}
+
+			.inline span.revelo {
+				display: block;
+			}
+		}
+		.img-container {
+			img {
+				width: 250px;
+				height: 250px;
+				position: relative;
+				top: 0;
+			}
+		}
+		&_text-wrapper {
+			margin-top: 5rem;
+			height: 30vh;
+			align-items: flex-start;
+			p {
+				text-align: left;
+				width: 100%;
+				max-width: 60%;
+			}
 		}
 	}
 }
