--- a/src/components/NavBar/Navbar.scss
+++ b/src/components/NavBar/Navbar.scss
@@ -100,3 +100,36 @@
 		}
 	}
 }
+
+@media only screen and (min-width: 960px) {
+	.nav {
+		padding: 2rem 135px;
+		&-box {
+			position: relative;
+			height: 0rem;
+			width: 50%;
+			display: flex;
+			flex-direction: row;
+			background: none;
+			padding: 2rem 0;
+			gap: 1rem;
+			// &:active {
+			// 	text-decoration: underline;
+			// }
+			// &:hover {
+			// 	color: $secondary-color;
+			// }
+			&.show {
+				display: flex;
+			}
+			&.desktop {
+				display: block;
+			}
+			&.hidden {
+				display: flex;
+				transform: translateY(-10%);
+				justify-content: flex-end;
+			}
+		}
+	}
+}
