--- a/src/components/CircularProgressBar/CircularProgressBar.scss
+++ b/src/components/CircularProgressBar/CircularProgressBar.scss
@@ -7,6 +7,8 @@
 	justify-content: space-between;
 	flex-direction: row;
 	padding: 1.5rem 0;
+	display: flex;
+	flex-direction: column;
 }
 
 .circle {
@@ -47,5 +49,27 @@
 @media only screen and (min-width: 660px) {
 	.circle-container {
 		padding: 2rem 0;
+	}
+}
+
+@media only screen and (min-width: 960px) {
+	.circle_container {
+		h3 {
+			font-size: 2vw;
+		}
+	}
+	.circle {
+		width: 15vw;
+		height: 15vw;
+	}
+
+	.inner-circle {
+		width: 12vw;
+		height: 12vw;
+	}
+
+	.icon {
+		width: 5.5vw;
+		height: 5.5vw;
 	}
 }
