Added desktop media query for database section and cloud section

--- a/src/components/DatabaseBox/DatabaseBox.scss
+++ b/src/components/DatabaseBox/DatabaseBox.scss
@@ -9,10 +9,10 @@
 	align-items: center;
 
 	img {
-		max-width: 100%; /* Ensure the image does not exceed the grid cell's width */
+		max-width: 100%;
 		max-height: 100%;
 		border: 2px solid $secondary-color;
-		padding: 2rem; /* Adjust padding as necessary */
+		padding: 2rem;
 		border-radius: 10px;
 	}
 }
@@ -24,18 +24,17 @@
 	}
 
 	.box img {
-		//width: 16.6vw; /* Adjust size for tablets */
 		padding: 2rem;
 	}
 }
 
 @media only screen and (min-width: 960px) {
 	.box {
-		gap: 4rem;
+		gap: 8rem;
 
 		img {
 			width: auto;
-			padding: 5rem;
+			//padding: 5rem;
 		}
 	}
 }
