--- a/src/components/Cloud/Cloud.scss
+++ b/src/components/Cloud/Cloud.scss
@@ -28,3 +28,15 @@
 		}
 	}
 }
+
+@media only screen and (min-width: 960px) {
+	.cloud {
+		&_container {
+			gap: 8rem;
+		}
+		img {
+			padding: 5rem;
+			width: 15%;
+		}
+	}
+}
