--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -59,7 +59,7 @@
 
 	.second-layer {
 		position: relative;
-		z-index: 1; /* Lower index below */
+		z-index: 3;
 		top: 0;
 		left: 0;
 		text-align: left;
