--- a/src/components/Cloud/Cloud.scss
+++ b/src/components/Cloud/Cloud.scss
@@ -3,15 +3,25 @@
 
 .cloud {
 	&_container {
-		display: flex;
-		justify-content: space-between;
-		padding-bottom: 4rem;
+		// display: flex;
+		// justify-content: space-between;
+		// padding-bottom: 4rem;
+		// gap: 2rem;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
 		gap: 2rem;
+		justify-content: space-between;
+		align-items: center;
 	}
 	img {
-		flex-grow: 1;
-		width: 20%;
-		height: auto;
+		// flex-grow: 1;
+		// width: 20%;
+		// height: auto;
+		// border: 2px solid $secondary-color;
+		// padding: 2rem;
+		// border-radius: 10px;
+		max-width: 100%;
+		max-height: 100%;
 		border: 2px solid $secondary-color;
 		padding: 2rem;
 		border-radius: 10px;
@@ -23,8 +33,12 @@
 
 @media only screen and (min-width: 660px) {
 	.cloud {
-		.hidden {
-			display: block;
+		&_container {
+			grid-template-columns: repeat(4, 1fr);
+			gap: 2.2;
+		}
+		img {
+			padding: 2rem;
 		}
 	}
 }
@@ -35,8 +49,8 @@
 			gap: 8rem;
 		}
 		img {
-			padding: 5rem;
-			width: 15%;
+			//padding: 3rem;
+			//width: 5%;
 		}
 	}
 }
