--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -35,7 +35,7 @@
 	}
 }
 
-.about_top {
+.about {
 	position: relative;
 	height: 25vh;
 	&_overlay {
@@ -122,113 +122,21 @@
 			}
 		}
 	}
-
-	.projects_box {
-		display: flex;
-		justify-content: space-around;
-		align-items: center;
-
-		.text-layer {
-			text-align: center;
-			flex: 1;
+	.about {
+		height: 36vh;
+		.first-layer {
+			font-size: 150px;
 		}
-	}
-
-	.intro {
-		p {
-			text-align: center;
-			max-width: 800px;
-			margin: 0 auto;
+		.text-layer p {
+			line-height: 8rem;
+			top: 0rem;
 		}
-	}
-	// .slider {
-	// 	padding: 0 125px;
-	// 	//margin: 4rem 0;
-	// }
-	// .intro {
-	// 	padding: 1rem 70px;
-	// }
-	// .slick-slide img {
-	// 	width: 90%;
-	// }
-	// .slick-prev:before,
-	// .slick-next:before {
-	// 	font-size: 35px;
-	// }
-
-	// .slick-prev {
-	// 	left: -70px; /* Adjust this value to give space for the left arrow */
-	// }
-
-	// .slick-next {
-	// 	right: -50px; /* Adjust this value to give space for the right arrow */
-	// }
-
-	// .intro {
-	// 	p {
-	// 		font-size: 18px;
-	// 	}
-	// }
-}
-
-@media only screen and (min-width: 960px) {
-	// 	.slider {
-	// 		padding: 0 80px; // Adjust padding for desktops
-	// 	}
-	// 	.intro {
-	// 		padding: 1rem 60px;
-	// 	}
-	// 	.slick-slide img {
-	// 		width: 70%; // Adjust width for desktops
-	// 		max-width: 350px; // Adjust max-width for desktops
-	// 	}
-	// 	.slick-prev:before,
-	// 	.slick-next:before {
-	// 		font-size: 30px; // Adjust arrow size for desktops
-	// 	}
-	// 	.slick-prev {
-	// 		left: -30px; // Adjust this value for desktop view
-	// 	}
-	// 	.slick-next {
-	// 		right: -30px; // Adjust this value for desktop view
-	// 	}
-	// 	.intro p {
-	// 		font-size: 20px;
-	// 	}
-	.slider {
-		display: flex;
-		justify-content: space-between;
-
-		.slick-list {
-			display: flex;
-			justify-content: space-between;
-		}
-
-		.slick-slide {
-			display: inline-block;
-			img {
-				width: 30%;
+		.second-layer {
+			top: 6rem;
+			padding: 0 70px;
+			&_text {
+				font-size: 40px;
 			}
-		}
-	}
-
-	.projects_box {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		text-align: center;
-
-		.text-layer {
-			max-width: 60%;
-			margin: 0 auto;
-		}
-	}
-
-	.intro {
-		p {
-			text-align: center;
-			max-width: 60%;
-			margin: 2rem auto;
 		}
 	}
 }
