--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -124,7 +124,7 @@
 			font-family: $roc-grotesk-light;
 			font-size: 14px;
 		}
-		button {
+		a {
 			text-align: center;
 		}
 	}
@@ -134,6 +134,8 @@
 		width: 200px;
 		color: $primary-color;
 		margin-bottom: 3rem;
+		padding: 0.5rem 1rem;
+		border-radius: 10px;
 	}
 }
 
