--- a/src/components/SoftSkills/SoftSkills.scss
+++ b/src/components/SoftSkills/SoftSkills.scss
@@ -20,7 +20,7 @@
 		font-size: $font-size-xlarge;
 		z-index: 2;
 		bottom: 20rem;
-		left: 45px;
+		padding-left: 45px;
 		position: relative;
 		width: 35%;
 	}
@@ -154,6 +154,8 @@
 		&-title {
 			font-size: 40px;
 			bottom: 24rem;
+			padding-left: 70px;
+			width: 50%;
 		}
 		&-box {
 			h3 {
@@ -168,6 +170,49 @@
 		}
 		&-bottom {
 			width: 200px;
+		}
+	}
+}
+
+@media only screen and (min-width: 960px) {
+	.soft_skills {
+		padding: 0 135px;
+		flex-direction: column;
+		justify-content: center;
+		gap: 0;
+		&-background {
+			justify-content: space-between;
+		}
+		&-title {
+			padding-left: 135px;
+		}
+		&-box {
+			width: 50%;
+		}
+		&-top {
+			flex-direction: row;
+			width: 100%;
+		}
+		&-middle {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			align-self: baseline;
+		}
+		&-bottom {
+			flex-direction: row;
+			top: 0;
+			width: 100%;
+		}
+	}
+	.line {
+		height: 5px;
+		width: 300px;
+		&-container {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			justify-content: flex-start;
 		}
 	}
 }
