--- a/src/components/SoftSkills/SoftSkills.scss
+++ b/src/components/SoftSkills/SoftSkills.scss
@@ -176,7 +176,7 @@
 
 @media only screen and (min-width: 960px) {
 	.soft_skills {
-		padding: 0 135px;
+		padding: 0 70px;
 		flex-direction: column;
 		justify-content: center;
 		gap: 2rem;
@@ -184,10 +184,10 @@
 			justify-content: space-between;
 		}
 		&-title {
-			padding-left: 135px;
+			padding-left: 70px;
 		}
 		&-box {
-			width: 30%;
+			width: 200px;
 		}
 		&-top {
 			flex-direction: row;
@@ -211,8 +211,8 @@
 		&-bottom {
 			flex-direction: row;
 			top: 0;
-			width: 100%;
-			justify-content: end;
+			width: 80%;
+			justify-content: center;
 			gap: 10rem;
 		}
 		&-circle {
