--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -124,10 +124,8 @@
 @media only screen and (min-width: 660px) {
 	.slider {
 		padding: 0 70px;
-		//	width: 60%;
 	}
 	.slick-slide img {
-		//width: 75%;
 	}
 
 	.about {
@@ -164,6 +162,9 @@
 			gap: 2rem;
 		}
 	}
+	.slider {
+		padding: 0 70px;
+	}
 }
 
 @media only screen and (min-width: 1240px) {
@@ -186,7 +187,7 @@
 			display: flex;
 			flex-direction: row;
 			align-items: center;
-			padding: 0 70px;
+			padding: 0 135px;
 			gap: 4rem;
 		}
 	}
