--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -13,7 +13,7 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background: rgba(0, 0, 0, 0.5); /* Adjust the opacity here */
+		background: rgba(0, 0, 0, 0.5);
 	}
 	&_box {
 		display: flex;
@@ -24,8 +24,6 @@
 	}
 	.text-layer {
 		align-items: center;
-		//justify-content: center;
-		//background-color: red;
 		position: relative;
 		top: 50%;
 		left: 50%;
@@ -33,7 +31,7 @@
 		display: flex;
 		transform: translate(-50%, 30%);
 		text-align: center;
-		color: white; /* Or any color that contrasts with your background */
+		color: white;
 	}
 
 	.text-layer p {
@@ -46,11 +44,10 @@
 	}
 
 	.first-layer {
-		z-index: 2; /* Higher index on top */
+		z-index: 2;
 		-webkit-text-stroke-width: 0.2px;
 		-webkit-text-stroke-color: white;
 		font-weight: bolder;
-		//font-size: 70px;
 		font-size: 18vw;
 		color: transparent;
 		position: relative;
@@ -262,6 +259,17 @@
 				width: 100%;
 				max-width: 60%;
 			}
+		}
+	}
+}
+
+@media only screen and (min-width: 1200px) {
+	.header {
+		&_box {
+			padding: 2rem 135px 0;
+		}
+		&_text-wrapper {
+			padding: 0 135px;
 		}
 	}
 }
