--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -21,7 +21,6 @@
 	}
 	.text-layer {
 		align-items: center;
-		//justify-content: center;
 		position: relative;
 		top: 50%;
 		left: 50%;
@@ -123,6 +122,8 @@
 		display: flex;
 		flex-direction: column;
 		gap: 1rem;
+		width: 100%; // Set maximum height
+
 		h2 {
 			color: white;
 			font-family: $montserrat-alternates-light;
@@ -204,6 +205,19 @@
 			a {
 				padding: 0.5rem 1rem;
 				font-size: 20px;
+			}
+		}
+	}
+}
+
+@media only screen and (min-width: 1200px) {
+	.projects {
+		&_container {
+			margin-top: 0;
+		}
+		&_top {
+			.text-layer p {
+				width: 75%;
 			}
 		}
 	}
