--- a/src/components/Cloud/Cloud.scss
+++ b/src/components/Cloud/Cloud.scss
@@ -3,10 +3,6 @@
 
 .cloud {
 	&_container {
-		// display: flex;
-		// justify-content: space-between;
-		// padding-bottom: 4rem;
-		// gap: 2rem;
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		gap: 2rem;
@@ -14,12 +10,6 @@
 		align-items: center;
 	}
 	img {
-		// flex-grow: 1;
-		// width: 20%;
-		// height: auto;
-		// border: 2px solid $secondary-color;
-		// padding: 2rem;
-		// border-radius: 10px;
 		max-width: 100%;
 		max-height: 100%;
 		border: 2px solid $secondary-color;
@@ -48,9 +38,16 @@
 		&_container {
 			gap: 8rem;
 		}
+	}
+}
+
+@media only screen and (min-width: 1240px) {
+	.cloud {
+		&_container {
+			gap: 10rem;
+		}
 		img {
-			//padding: 3rem;
-			//width: 5%;
+			padding: 2rem;
 		}
 	}
 }
