--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -163,6 +163,21 @@
 			font-size: 14px;
 		}
 	}
+	.details {
+		h3 {
+			color: $primary-color;
+			font-family: $montserrat-alternates-light;
+		}
+		p {
+			color: $primary-color;
+			font-family: $roc-grotesk-light;
+		}
+		.outcome {
+			display: flex;
+			flex-direction: column;
+			gap: 1rem;
+		}
+	}
 }
 
 @media only screen and (min-width: 660px) {
