--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -165,6 +165,7 @@
 	align-items: center;
 	&_text {
 		color: black;
+		font-family: $montserrat-alternates-regular;
 	}
 }
 
@@ -175,13 +176,24 @@
 	border: 1px solid #888;
 	width: 80%;
 	max-width: 500px;
+	display: flex;
+	flex-direction: column;
+	p {
+		color: black;
+		font-family: $roc-grotesk-regular;
+		margin-bottom: 1.5rem;
+		font-size: 1.1rem;
+		color: #333;
+		text-align: center;
+	}
 }
 
 .close {
 	color: #aaa;
-	float: right;
+	align-self: flex-end;
 	font-size: 28px;
 	font-weight: bold;
+	line-height: 15px;
 }
 
 .close:hover,
@@ -194,4 +206,42 @@
 #contactForm {
 	display: flex;
 	flex-direction: column;
+}
+input,
+textarea {
+	margin-bottom: 1.5rem;
+	padding: 0.75rem;
+	background-color: #fefefe;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	font-size: 1rem;
+	color: #333;
+	width: 100%;
+	box-sizing: border-box;
+}
+
+input {
+	height: 2rem;
+}
+textarea {
+	height: 5rem;
+}
+input:focus,
+textarea:focus {
+	border-color: #666;
+	outline: none;
+}
+
+button[type="submit"] {
+	background-color: #333;
+	color: #fff;
+	padding: 0.75rem 1.5rem;
+	border: none;
+	border-radius: 4px;
+	font-size: 1rem;
+	cursor: pointer;
+}
+
+button[type="submit"]:hover {
+	background-color: #555;
 }
