--- a/src/components/SoftSkills/SoftSkills.scss
+++ b/src/components/SoftSkills/SoftSkills.scss
@@ -33,6 +33,7 @@
 			font-size: 12.5px;
 			font-family: $montserrat-alternates-light;
 			font-weight: 500;
+			color: $text-color;
 		}
 	}
 	&-circle {
