--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -37,6 +37,9 @@
 		font-family: $roc-grotesk-light;
 	}
 }
+#about-section {
+	background-color: #242424;
+}
 
 .about {
 	position: relative;
@@ -60,6 +63,7 @@
 		align-items: center;
 		width: 100%;
 	}
+
 	.text-layer {
 		align-items: center;
 		//justify-content: center;
