--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -35,6 +35,9 @@
 		font-weight: 400;
 		padding: 2rem 0 2rem 0;
 	}
+	h3 {
+		color: $primary-color;
+	}
 	p {
 		color: $text-color;
 		font-family: $roc-grotesk-regular;
@@ -68,7 +71,7 @@
 	.skills {
 		&-container {
 			padding: 0 70px 6rem;
-			margin-bottom: 3rem;
+			margin-bottom: 0rem;
 		}
 		&-title {
 			font-size: $font-size-xxlarge;
@@ -85,7 +88,7 @@
 @media only screen and (min-width: 960px) {
 	.skills {
 		&-container {
-			margin-bottom: 6rem;
+			margin-bottom: 0rem;
 		}
 	}
 }
